z-index fix

--- a/src/theme/_smui-theme.scss
+++ b/src/theme/_smui-theme.scss
@@ -9,3 +9,13 @@
 	$background: #fff,
 	$error: color-palette.$red-900
 );
+
+body {
+	.mdc-top-app-bar__section {
+		z-index: initial;
+	}
+	
+	.mdc-top-app-bar__title {
+		z-index: initial;
+	}
+}
